k8s/admin.yaml
# 1. THE DEPLOYMENT (Runs your Docker Image)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin-container
        image: warunadev/caresync-admin:v5
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
---
# 2. THE SERVICE (Gives it an internal network IP)
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: ClusterIP # Means it is only accessible inside the K8s cluster
  selector:
    app: admin
  ports:
    - port: 5002
      targetPort: 5002
