k8s/api-gateway.yaml
---
# 1. THE DEPLOYMENT (Runs your Docker Image)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway-container
        image: healthcare-microservices-api-gateway:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
# 2. THE SERVICE (Networking)
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  type: ClusterIP # Keeps the Gateway secure inside the cluster until Ingress exposes it
  selector:
    app: api-gateway
  ports:
    - port: 5000
      targetPort: 5000
