k8s/doctor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor
  template:
    metadata:
      labels:
        app: doctor
    spec:
      containers:
      - name: doctor-container
        image: healthcare-microservices-doctor-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5025
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  type: ClusterIP
  selector:
    app: doctor
  ports:
  - protocol: TCP
    port: 5025
    targetPort: 5025
