k8s/patient.yaml
---
# 1. THE DEPLOYMENT (Manages the Pods)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient
  template:
    metadata:
      labels:
        app: patient
    spec:
      containers:
      - name: patient-container
        image: warunadev/caresync-patient:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 5005  
---
# 2. THE SERVICE (Handles Networking)
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: ClusterIP
  selector:
    app: patient
  ports:
  - protocol: TCP
    port: 5005        
    targetPort: 5005
