k8s/payment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment-container
        image: healthcare-microservices-payment-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
  - protocol: TCP
    port: 5004
    targetPort: 5004
