k8s/telemedicine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemedicine-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemedicine
  template:
    metadata:
      labels:
        app: telemedicine
    spec:
      containers:
      - name: telemedicine-container
        image: healthcare-microservices-telemedicine-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5018
---
apiVersion: v1
kind: Service
metadata:
  name: telemedicine-service
spec:
  type: ClusterIP
  selector:
    app: telemedicine
  ports:
  - protocol: TCP
    port: 5018
    targetPort: 5018
