k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caresync-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
    # FIX: This tells NGINX to allow file uploads up to 20 Megabytes!
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
  - http:
      paths:
      # 1. API Route
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 5000
              
      # 2. Frontend Route
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
